fixed loading spinner not visible on fetchMore calls

--- a/src/styles/cardlist.css
+++ b/src/styles/cardlist.css
@@ -83,7 +83,7 @@ to customize scrollbars in those enviroments, use SimpleScroll, an npm package
   }
  
 .spinner_middle{
-  position: absolute;
+  position: fixed;
   z-index: 1;
   transform: translate(-4%, 450%);
 }
